refactor: 휴먼 에러 미연 방지